little copy writing and route tweaks

--- a/src/edit-profil.html
+++ b/src/edit-profil.html
@@ -57,7 +57,7 @@
                         <form action="">
                           <input
                             type="text"
-                            placeholder="Masukkan nama anda"
+                            placeholder="Nama"
                             class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
                           />
                       </form>
@@ -69,7 +69,7 @@
                         <form action="">
                             <input
                               type="text"
-                              placeholder="Masukkan NIP anda"
+                              placeholder="NIP"
                               class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
                             />
                         </form>
@@ -81,7 +81,7 @@
                         <select
           name="unit"
           id="unit_kerja"
-          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
         >
           <option selected>Unit Kerja</option>
           <option value="1">
@@ -121,7 +121,7 @@
                         <select
           name="gender"
           id="gender"
-          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
         >
           <option selected>Jenis Kelamin</option>
           <option value="1">Laki-Laki</option>
@@ -135,7 +135,7 @@
                         <select
           name="unit"
           id="unit_kerja"
-          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
         >
           <option selected>Agama</option>
           <option value="1">
@@ -160,7 +160,7 @@
                   <tr class="pt-1 align-top">
                     <td>Alamat</td>
                     <td class="pl-4">
-                        <textarea name="alamat" id="alamat" cols="30" rows="10" class="mt-1 pl-[10px] pt-[10px] text-sm font-normal border border-cBlue rounded-md bg-white w-[420px]" placeholder="Alamat"></textarea>
+                        <textarea name="alamat" id="alamat" cols="30" rows="10" class="mt-1 pl-[10px] pt-[10px] text-bBlue font-normal border border-cBlue rounded-md bg-white w-[420px]" placeholder="Alamat"></textarea>
                     </td>
                   </tr>
                   <tr class="pt-1">
@@ -169,7 +169,7 @@
                         <form action="">
                             <input
                               type="number"
-                              placeholder="Masukkan No.Telp anda"
+                              placeholder="No.Telp"
                               class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
                             />
                         </form>
@@ -181,7 +181,7 @@
                         <form action="">
                             <input
                               type="text"
-                              placeholder="Masukkan Email anda"
+                              placeholder="Email"
                               class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
                             />
                         </form>
@@ -193,7 +193,7 @@
                         <form action="">
                             <input
                               type="text"
-                              placeholder="Masukkan Pendidikan Terakhir anda"
+                              placeholder="Pendidikan Terakhir"
                               class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
                             />
                         </form>
@@ -216,14 +216,14 @@
             </tr>
           </table>
           <div class="ml-[120px] mb-10 mt-[14px] text-lg font-extrabold">
-            <a href="/src/login.html"
+            <a href="/src/profil.html"
           ><button
             class="text-aBlue border-2 border-aBlue w-[192px] py-[10px] rounded-md"
           >
             Cancel
           </button></a
         >
-        <a href="/src/register-username.html"
+        <a href="/src/profil.html"
           ><button
             class="text-white border-2 border-dBlue bg-dBlue w-[192px] py-[10px] rounded-md ml-[31px]"
           >
