--- a/src/profil.html
+++ b/src/profil.html
@@ -99,11 +99,13 @@
                   alt="foto-diri"
                   class="w-[155px]"
                 />
-                <button
-                  class="bg-dBlue text-lg text-white font-extrabold h-[50px] w-[154px] rounded-md mt-3"
-                >
-                  Edit Profil
-                </button>
+                <a href="/src/edit-profil.html">
+                  <button
+                    class="bg-dBlue text-lg text-white font-extrabold h-[50px] w-[154px] rounded-md mt-3"
+                  >
+                    Edit Profil
+                  </button>
+                </a>
               </th>
             </tr>
           </table>
