--- a/src/laporan.html
+++ b/src/laporan.html
@@ -22,13 +22,13 @@
       <div class="menu h-[58px] bg-bBlue text-xl text-white">
         <table>
           <tr>
-            <th class="text-center font-bold py-[17px] pl-14">
+            <th class="text-center font-bold py-[17px] pl-14 hover:underline">
               <a href="/src/home.html">Beranda</a>
             </th>
             <th class="text-center px-10 font-black underline">
               <a href="/src/laporan.html">Laporan Harian</a>
             </th>
-            <th class="text-center font-bold">
+            <th class="text-center font-bold hover:underline">
               <a href="/src/profil.html">Profil</a>
             </th>
             <th class="text-right font-bold pl-[779px]">
