add active state on admin

--- a/src/admin-specific.html
+++ b/src/admin-specific.html
@@ -122,7 +122,7 @@
               ><img src="/src/assets/Images/home-logo.png" alt="home" />Home</a
             >
           </li>
-          <li class="pl-2">
+          <li class="pl-2 bg-lBlue">
             <a href="/src/admin-data.html"
               ><img
                 src="/src/assets/Images/data-logo.png"
