--- a/src/admin-data.html
+++ b/src/admin-data.html
@@ -237,7 +237,7 @@
       <div class="drawer-side">
         <label for="my-drawer-2" class="drawer-overlay"></label>
         <ul
-          class="menu p-4 w-[268px] bg-lgray text-dBlue font-nunito font-bold text-sm"
+          class="menu pl-4 w-[268px] bg-lgray text-dBlue font-nunito font-bold text-sm"
         >
           <!-- sidebar content here -->
           <li class="text-2xl font-extrabold text-bBlue pt-6">
@@ -248,7 +248,7 @@
               ><img src="/src/assets/Images/home-logo.png" alt="home" />Home</a
             >
           </li>
-          <li class="pl-2">
+          <li class="pl-2 bg-lBlue">
             <a href="/src/admin-data.html"
               ><img
                 src="/src/assets/Images/data-logo.png"
