--- a/src/login.html
+++ b/src/login.html
@@ -27,7 +27,7 @@
             </form>
           </div>
           <div class="lupa-password mt-4 font-nunito font-normal">
-            <a href="#" class="ml-[473px] font-light underline">Lupa password?</a>
+            <a href="#" class="ml-[473px] font-light underline text-blue-600">Lupa password?</a>
           </div>
           <div class="text-lg ml-[473px] font-nunito font-extrabold h-[50px] mt-[11px]">
               <a href="/src/register.html"><button class="text-aBlue border-2 border-aBlue w-[192px] py-[10px] rounded-md">Daftar</button></a>
