add hover effect on user navbar

--- a/src/profil.html
+++ b/src/profil.html
@@ -22,10 +22,10 @@
       <div class="menu h-[58px] bg-bBlue text-xl text-white">
         <table>
           <tr>
-            <th class="text-center font-bold py-[17px] pl-14">
+            <th class="text-center font-bold py-[17px] pl-14 hover:underline">
               <a href="/src/home.html">Beranda</a>
             </th>
-            <th class="text-center font-bold px-10">
+            <th class="text-center font-bold px-10 hover:underline">
               <a href="/src/laporan.html">Laporan Harian</a>
             </th>
             <th class="text-center font-black underline">
