--- a/src/home.html
+++ b/src/home.html
@@ -25,10 +25,10 @@
             <th class="text-center font-black underline py-[17px] pl-14">
               <a href="/src/home.html">Beranda</a>
             </th>
-            <th class="text-center font-bold px-10">
+            <th class="text-center font-bold px-10 hover:underline">
               <a href="/src/laporan.html">Laporan Harian</a>
             </th>
-            <th class="text-center font-bold">
+            <th class="text-center font-bold hover:underline">
               <a href="/src/profil.html">Profil</a>
             </th>
             <th class="text-right font-bold pl-[779px]">
