fixed button routing

--- a/src/register.html
+++ b/src/register.html
@@ -138,7 +138,7 @@
             Cancel
           </button></a
         >
-        <a href="/src/register-username.html"
+        <a href="/src/username.html"
           ><button
             class="text-white border-2 border-dBlue bg-dBlue w-[192px] py-[10px] rounded-md ml-[31px]"
           >
