--- a/src/upload-photo.html
+++ b/src/upload-photo.html
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="mt-4">
-        <a href="/src/register-username.html"
+        <a href="/src/username.html"
           ><button
             class="border-2 border-bBlue w-[162px] py-3 text-bBlue text-lg font-extrabold rounded-md"
           >
