--- a/src/username.html
+++ b/src/username.html
@@ -54,15 +54,9 @@
             class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
-      <div class="mt-[14px] mb-10 text-lg font-extrabold">
-        <a href="/src/register.html"
-          ><button
-            class="text-aBlue border-2 border-aBlue w-[192px] py-[10px] rounded-md"
-          >
-            Cancel
-          </button></a
-        >
-        <a href="/src/upload-photo.html"><button class="text-white border-2 border-dBlue bg-dBlue w-[192px] py-[10px] rounded-md ml-[31px]">Next</button></a>
+      <div class="mt-[14px] mb-10 text-lg font-extrabold flex gap-9">
+        <button class="text-aBlue border-2 border-aBlue w-[192px] py-[10px] rounded-md"><a href="/src/register.html">Cancel</a></button>
+        <a href="/src/upload-photo.html" class="block text-white border-2 border-dBlue bg-dBlue w-[192px] py-[10px] rounded-md text-center">Next</a>
       </div>
     </div>
     <footer class="bg-lBlue text-bBlue py-[22px] text-center fixed inset-x-0 bottom-0">
