add export data and pengunduran diri on profile page

--- a/src/profil.html
+++ b/src/profil.html
@@ -94,10 +94,11 @@
                 </table>
               </th>
               <th class="pl-[440px] align-top">
+                <button class="bg-bBlue text-lg text-white font-extrabold h-[50px] w-[154px] rounded-md ">Export Data</button><br>
                 <img
                   src="/src/assets/Images/stock-photo.png"
                   alt="foto-diri"
-                  class="w-[155px]"
+                  class="w-[155px] mt-3"
                 />
                 <a href="/src/edit-profil.html">
                   <button
@@ -105,7 +106,8 @@
                   >
                     Edit Profil
                   </button>
-                </a>
+                </a><br>
+                <button class="border-2 border-bBlue text-sm text-bBlue font-extrabold h-[48px] w-[152px] rounded-md mt-3">Ajukan <br> Pengunduran Diri</button>
               </th>
             </tr>
           </table>
