--- a/src/admin-dashboard.html
+++ b/src/admin-dashboard.html
@@ -68,6 +68,32 @@
             configLineChart
           );
         </script>
+        <table class="mx-[28px] mt-9 font-nunito">
+          <tr>
+              <th class="font-semibold text-base pt-[26px] text-bBlue text-left">
+                  Cari Data Laporan
+              </th>
+              <th class="pl-[430px] text-left">
+                  <form action="">
+                      <div class="text-sm">
+                          <label for="tanggal" class="font-semibold text-bBlue">Tanggal</label><br>
+                          <input type="date" placeholder="Pilih Tanggal" class="font-normal bg-white border border-bBlue rounded-md w-[135px] h-[45px] mt-1 pl-[10px] text-bBlue">
+                      </div>
+                  </form>
+              </th>
+              <th class="pl-[13px] text-left">
+                  <form action="">
+                      <div class="text-sm">
+                          <label for="nama" class="font-semibold text-bBlue">Nama</label><br>
+                          <input type="text" placeholder="Cari Nama" class="font-normal text-bBlue bg-white border border-bBlue rounded-md w-[184px] h-[45px] mt-1 pl-[10px]">
+                      </div>
+                  </form>
+              </th>
+              <th class="pl-5 pt-[22px]">
+                  <button class="w-[103px] h-[45px] font-extrabold text-white text-lg bg-dBlue rounded-md">Cari</button>
+              </th>
+          </tr>
+      </table>
         <table
         class="mt-6 text-sm font-semibold border border-collapse mx-[28px]"
       >
