revision admin-data page

--- a/src/admin-data.html
+++ b/src/admin-data.html
@@ -58,8 +58,8 @@
                 <th class="pl-[13px] text-left">
                     <form action="">
                         <div class="text-sm">
-                            <label for="birthdate" class="font-semibold text-bBlue">Tanggal Lahir</label><br>
-                            <input type="text" placeholder="DD/MM/YYYY" class="font-normal bg-white border border-cBlue rounded-md w-[135px] h-[45px] mt-1 pl-[10px]">
+                            <label for="tahunmasuk" class="font-semibold text-bBlue">Tahun Aktif</label><br>
+                            <input type="number" placeholder="Tahun Aktif" class="font-normal bg-white border border-cBlue rounded-md w-[135px] h-[45px] mt-1 pl-[10px]">
                         </div>
                     </form>
                 </th>
@@ -224,6 +224,7 @@
             </td>
           </tr>
       </table>
+      <button class="ml-[920px] mt-3 w-[150px] h-[45px] font-nunito font-extrabold text-white text-lg bg-bBlue rounded-md">Export Data</button>
         <footer
           class="bg-lBlue font-nunito text-bBlue font-normal text-sm py-[22px] text-center fixed inset-x-0 bottom-0 mt-[90px]"
         >
