revision register page

--- a/src/register.html
+++ b/src/register.html
@@ -29,7 +29,7 @@
           <input
             type="text"
             placeholder="Masukkan nama anda"
-            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue text-bBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       </form>
@@ -38,7 +38,7 @@
         <select
           name="unit"
           id="unit_kerja"
-          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-bBlue bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
         >
           <option selected>Unit Kerja</option>
           <option value="1">
@@ -66,7 +66,7 @@
           <input
             type="number"
             placeholder="Masukkan No.Telp anda"
-            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue text-bBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       </form>
@@ -83,7 +83,7 @@
               <select
                 name="city"
                 id="city"
-                class="mt-1 w-[122px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                class="mt-1 w-[122px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-bBlue bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
               >
                 <option selected>Kota</option>
                 <option value="1">Jakarta</option>
@@ -97,8 +97,8 @@
           <td>
             <div class="datepicker">
               <input
-                type="text"
-                class="mt-1 form-control block w-[282px] h-[45px] px-[10px] text-sm font-normal text-lBlue bg-white bg-clip-padding border border-solid border-cBlue rounded-md transition ease-in-out ml-4 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                type="date"
+                class="mt-1 w-[282px] h-[45px] px-[10px] text-sm font-normal text-bBlue bg-white bg-clip-padding border border-solid border-cBlue rounded-md transition ease-in-out ml-4 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
                 placeholder="DD/MM/YYYY"
               />
             </div>
@@ -112,7 +112,7 @@
         <select
           name="gender"
           id="gender"
-          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-bBlue bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
         >
           <option selected>Jenis Kelamin</option>
           <option value="1">Laki-Laki</option>
@@ -126,7 +126,7 @@
           <input
             type="text"
             placeholder="Masukkan email anda"
-            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue text-bBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       </form>
