revision username page

--- a/src/username.html
+++ b/src/username.html
@@ -29,7 +29,7 @@
           <input
             type="text"
             placeholder="Masukkan NIP anda"
-            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue text-bBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       </form>
@@ -40,7 +40,7 @@
           <input
             type="password"
             placeholder="Masukkan Password yang akan dibuat"
-            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue text-bBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       </form>
@@ -51,7 +51,7 @@
           <input
             type="password"
             placeholder="Konfirmasi Password anda"
-            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+            class="font-normal bg-white border border-cBlue text-bBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
           />
         </div>
       <div class="mt-[14px] mb-10 text-lg font-extrabold flex gap-9">
