tweak search bar text color

--- a/src/admin-data.html
+++ b/src/admin-data.html
@@ -35,7 +35,7 @@
                     <form action="">
                         <div class="text-sm">
                             <label for="nip" class="font-semibold text-bBlue">NIP</label><br>
-                            <input type="text" placeholder="Cari NIP" class="font-normal bg-white border border-cBlue rounded-md w-[135px] h-[45px] mt-1 pl-[10px]">
+                            <input type="text" placeholder="Cari NIP" class="font-normal text-bBlue bg-white border border-cBlue rounded-md w-[135px] h-[45px] mt-1 pl-[10px]">
                         </div>
                     </form>
                 </th>
@@ -43,7 +43,7 @@
                     <form action="">
                         <div class="text-sm">
                             <label for="nama" class="font-semibold text-bBlue">Nama</label><br>
-                            <input type="text" placeholder="Cari Nama" class="font-normal bg-white border border-cBlue rounded-md w-[184px] h-[45px] mt-1 pl-[10px]">
+                            <input type="text" placeholder="Cari Nama" class="font-normal text-bBlue bg-white border border-cBlue rounded-md w-[184px] h-[45px] mt-1 pl-[10px]">
                         </div>
                     </form>
                 </th>
@@ -51,7 +51,7 @@
                     <form action="">
                         <div class="text-sm">
                             <label for="unit-kerja" class="font-semibold text-bBlue">Unit Kerja</label><br>
-                            <input type="text" placeholder="Cari Unit Kerja" class="font-normal bg-white border border-cBlue rounded-md w-[184px] h-[45px] mt-1 pl-[10px]">
+                            <input type="text" placeholder="Cari Unit Kerja" class="font-normal text-bBlue bg-white border border-cBlue rounded-md w-[184px] h-[45px] mt-1 pl-[10px]">
                         </div>
                     </form>
                 </th>
@@ -59,7 +59,7 @@
                     <form action="">
                         <div class="text-sm">
                             <label for="tahunmasuk" class="font-semibold text-bBlue">Tahun Aktif</label><br>
-                            <input type="number" placeholder="Tahun Aktif" class="font-normal bg-white border border-cBlue rounded-md w-[135px] h-[45px] mt-1 pl-[10px]">
+                            <input type="number" placeholder="Tahun Aktif" class="font-normal text-bBlue bg-white border border-cBlue rounded-md w-[135px] h-[45px] mt-1 pl-[10px]">
                         </div>
                     </form>
                 </th>
