tweak admin-edit and add route from admin-specific

--- a/src/admin-specific.html
+++ b/src/admin-specific.html
@@ -85,11 +85,13 @@
                 alt="foto-diri"
                 class="h-[195px] mt-3"
               />
-              <button
-                class="bg-dBlue text-lg text-white font-extrabold h-[50px] w-[154px] rounded-md mt-3"
-              >
-                Edit Profil</button
-              ><br />
+              <a href="/src/admin-edit.html">
+                <button
+                  class="bg-dBlue text-lg text-white font-extrabold h-[50px] w-[154px] rounded-md mt-3"
+                >
+                  Edit Profil</button
+                ><br />
+              </a>
               <button
                 class="border-2 border-bBlue text-bBlue font-extrabold rounded-md h-[48px] w-[152px] mt-3"
               >
