--- a/src/admin-edit.html
+++ b/src/admin-edit.html
@@ -62,7 +62,7 @@
                     <select
                       name="unit"
                       id="unit_kerja"
-                      class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
+                      class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-bBlue bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
                     >
                       <option selected>Unit Kerja</option>
                       <option value="1">
@@ -92,7 +92,7 @@
                   <td class="pl-4">
                     <form action="">
                       <input
-                        type="text"
+                        type="date"
                         placeholder="DD/MM/YYYY"
                         class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
                       />
@@ -105,7 +105,7 @@
                     <select
                       name="gender"
                       id="gender"
-                      class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
+                      class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-bBlue bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
                     >
                       <option selected>Jenis Kelamin</option>
                       <option value="1">Laki-Laki</option>
@@ -119,7 +119,7 @@
                     <select
                       name="unit"
                       id="unit_kerja"
-                      class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
+                      class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-bBlue bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
                     >
                       <option selected>Agama</option>
                       <option value="1">Islam</option>
