--- a/src/login.html
+++ b/src/login.html
@@ -7,7 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/assets/Style/style.css">
+    <style>
+      body {
+        background-image: url("assets/Images/bg-login.png");
+        background-size: cover;
+      }
+    </style>
   </head>
   <body class="flex flex-col min-h-screen">
     <div class="form-login">
