tweak input text color

--- a/src/edit-profil.html
+++ b/src/edit-profil.html
@@ -46,7 +46,7 @@
         </table>
         </div>
         <div class="content mt-10 ml-[250px] text-bBlue">
-          <div class="font-extrabold text-4xl">Profil</div>
+          <div class="font-extrabold text-4xl">Edit Profil</div>
           <table class="mt-[15px] text-base font-semibold">
             <tr>
               <th>
@@ -58,7 +58,7 @@
                           <input
                             type="text"
                             placeholder="Nama"
-                            class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+                            class="font-normal bg-white border border-cBlue text-bBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
                           />
                       </form>
                     </td>
@@ -70,7 +70,7 @@
                             <input
                               type="text"
                               placeholder="NIP"
-                              class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+                              class="font-normal bg-white border border-cBlue text-bBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
                             />
                         </form>
                     </td>
@@ -81,7 +81,7 @@
                         <select
           name="unit"
           id="unit_kerja"
-          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
+          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-bBlue bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
         >
           <option selected>Unit Kerja</option>
           <option value="1">
@@ -108,9 +108,9 @@
                     <td class="pl-4">
                         <form action="">
                             <input
-                              type="text"
+                              type="date"
                               placeholder="DD/MM/YYYY"
-                              class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+                              class="font-normal bg-white border border-cBlue text-bBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
                             />
                         </form>
                     </td>
@@ -121,7 +121,7 @@
                         <select
           name="gender"
           id="gender"
-          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
+          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-bBlue bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
         >
           <option selected>Jenis Kelamin</option>
           <option value="1">Laki-Laki</option>
@@ -135,7 +135,7 @@
                         <select
           name="unit"
           id="unit_kerja"
-          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-gray-400 bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
+          class="mt-1 w-[420px] h-[45px] form-select appearance-none block px-[10px] text-sm font-normal text-bBlue bg-white bg-clip-padding bg-no-repeat border border-solid border-cBlue rounded-md transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-black focus:outline-none"
         >
           <option selected>Agama</option>
           <option value="1">
@@ -182,7 +182,7 @@
                             <input
                               type="text"
                               placeholder="Email"
-                              class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+                              class="font-normal bg-white border border-cBlue text-bBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
                             />
                         </form>
                     </td>
@@ -194,7 +194,7 @@
                             <input
                               type="text"
                               placeholder="Pendidikan Terakhir"
-                              class="font-normal bg-white border border-cBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
+                              class="font-normal bg-white border border-cBlue text-bBlue rounded-md w-[420px] h-[45px] mt-1 pl-[10px]"
                             />
                         </form>
                     </td>
